--- a/src/presentation/index.html
+++ b/src/presentation/index.html
@@ -44,9 +44,18 @@
             <span class="hero-tag">V21.1 NEURAL RESEARCH MODULE</span>
             <h1 class="hero-title">FROM INK<br>TO LIFE</h1>
             <p class="hero-desc">
-                The advanced research platform for photorealistic character synthesis. 
-                Utilizing state-of-the-art Latent Diffusion and Temporal Consistency 
-                protocols to transform 2D subject DNA into cinematic realism.
+                Z-Realism is an advanced research platform dedicated to the 
+                photorealistic synthesis of characters from 2D source manifolds. 
+                The institute explores how latent diffusion, structural priors, 
+                and perceptual constraints can be orchestrated to transform 
+                stylized representations into cinematic, high-fidelity realism.
+            </p>
+            <p class="hero-desc">
+                By leveraging state-of-the-art Latent Diffusion pipelines and 
+                rigorously controlled Temporal Consistency protocols, the system 
+                translates <strong>Subject DNA</strong>—the invariant visual identity 
+                encoded in the source—into coherent still imagery and motion-aware 
+                sequences suitable for research, prototyping, and visual analysis.
             </p>
             <div class="hero-actions">
                 <a href="image-lab.html" class="btn btn-primary">
@@ -68,9 +77,17 @@
                 <div class="module-icon">🖼️</div>
                 <h3>Static Fusion</h3>
                 <p>
-                    Synthesize 8K photorealistic stills from 2D character manifolds. 
-                    Employs strict structural conditioning to preserve identity 
-                    and chromatic integrity during high-entropy denoising.
+                    The Static Fusion laboratory focuses on the synthesis of ultra 
+                    high-resolution photorealistic stills from 2D character manifolds. 
+                    It employs strict structural conditioning, depth-aware guidance, 
+                    and chromatic stabilization techniques to preserve identity, 
+                    anatomical coherence, and color fidelity during high-entropy 
+                    denoising processes.
+                </p>
+                <p>
+                    This module serves as the foundational stage of the research 
+                    pipeline, producing identity-stable frames suitable for 
+                    evaluation, dataset generation, or subsequent temporal extension.
                 </p>
                 <div class="module-link">LAUNCH STATIC MODULE &rarr;</div>
             </a>
@@ -80,9 +97,16 @@
                 <div class="module-icon" style="filter: drop-shadow(0 0 15px var(--accent-video));">🎥</div>
                 <h3>Temporal Fusion</h3>
                 <p>
-                    Inject cinematic motion into neural stills. Implements the 
-                    AnimateDiff temporal engine with sequential weight offloading, 
-                    optimized for high-resolution output on local hardware.
+                    The Temporal Fusion laboratory extends static neural outputs 
+                    into time-coherent cinematic sequences. It implements the 
+                    AnimateDiff temporal engine augmented with frame-to-frame 
+                    stabilization heuristics and motion-aware latent anchoring.
+                </p>
+                <p>
+                    Sequential weight offloading and aggressive VRAM management 
+                    enable high-resolution video synthesis on local, consumer-grade 
+                    hardware, making temporal experimentation accessible without 
+                    reliance on cloud-based compute clusters.
                 </p>
                 <div class="module-link">LAUNCH TEMPORAL MODULE &rarr;</div>
             </a>
@@ -92,9 +116,17 @@
                 <div class="module-icon">🧬</div>
                 <h3>Metadata Analysis</h3>
                 <p>
-                    Heuristic feature extraction from source manifolds. 
-                    The analyzer sequences visual DNA and recommends optimal 
-                    stochastic parameters for the diffusion loop.
+                    The Metadata Analysis subsystem performs heuristic feature 
+                    extraction on source manifolds and intermediate outputs. 
+                    It identifies invariant visual traits, structural landmarks, 
+                    and chromatic signatures that collectively define the 
+                    subject’s visual DNA.
+                </p>
+                <p>
+                    This intelligence layer sequences the extracted metadata into 
+                    optimized stochastic parameters for the diffusion loop, enabling 
+                    reproducibility, controlled variation, and identity preservation 
+                    across both static and temporal synthesis stages.
                 </p>
                 <div class="module-link" style="color: var(--text-muted);">SYSTEM INTEGRATED</div>
             </div>
