--- a/src/presentation/architecture.html
+++ b/src/presentation/architecture.html
@@ -51,10 +51,17 @@
             <div class="info-content">
                 <p>
                     Z-Realism v21.1 is architected using the <strong>Hexagonal Architecture</strong> 
-                    (Ports & Adapters) pattern. This decoupling ensures that the core domain 
-                    logic—the synthesis and evaluation of character DNA—remains independent of 
-                    volatile infrastructure, such as specific web frameworks (FastAPI) or 
-                    Generative AI libraries (Diffusers).
+                    (Ports & Adapters) pattern as a foundational design decision rather than an 
+                    implementation detail. This architectural choice establishes a strict 
+                    separation between the core domain model and all external concerns, allowing 
+                    the system to evolve without structural erosion.
+                </p>
+                <p>
+                    This decoupling ensures that the core domain logic—the synthesis, transformation, 
+                    and evaluation of character visual DNA—remains fully independent of volatile 
+                    infrastructure components, such as specific web frameworks (FastAPI), messaging 
+                    systems (Redis), or Generative AI libraries (Diffusers). As a result, technological 
+                    substitutions can occur without propagating refactors across the codebase.
                 </p>
             </div>
         </header>
@@ -62,11 +69,22 @@
         <section class="info-section info-content">
             <h2>Hexagonal Implementation</h2>
             <p>
-                By defining strict <strong>Ports</strong> (Interfaces) within the Domain Layer, 
-                infrastructure adapters can be swapped without affecting the business logic. 
-                For instance, the system can toggle between the <code>StableDiffusionGenerator</code> 
-                and a <code>MockGenerator</code> (for non-GPU testing) seamlessly, adhering 
-                strictly to the <strong>Liskov Substitution Principle (SOLID)</strong>.
+                The Hexagonal implementation is enforced by defining strict <strong>Ports</strong> 
+                (Interfaces) within the Domain Layer. These ports express the domain’s intent in 
+                purely semantic terms, avoiding any coupling to implementation mechanics such as 
+                CUDA kernels, file systems, or network protocols.
+            </p>
+            <p>
+                Infrastructure adapters implement these ports and are injected at runtime, allowing 
+                the system to swap concrete implementations without impacting business logic. 
+                For example, the inference engine can toggle seamlessly between the 
+                <code>StableDiffusionGenerator</code> and a <code>MockGenerator</code> for non-GPU 
+                testing, validation pipelines, or continuous integration environments.
+            </p>
+            <p>
+                This behavior adheres strictly to the <strong>Liskov Substitution Principle (SOLID)</strong>, 
+                guaranteeing that all adapters remain behaviorally consistent with the expectations 
+                of the domain, regardless of performance characteristics or hardware availability.
             </p>
 
             <!-- Mermaid Diagram: Hexagonal Structure -->
@@ -92,27 +110,56 @@
 
             <h2>Hardware Tenancy (GPU Mutex)</h2>
             <p>
-                To support high-resolution neural inference on consumer-grade research 
-                laptops (GTX 1060 6GB), the architecture implements a <strong>Hardware 
-                Tenancy Protocol</strong>. This is managed via a distributed Redis-based 
-                Mutex at the API Gateway level.
+                To support high-resolution neural inference on consumer-grade research hardware, 
+                including laptops equipped with legacy GPUs (GTX 1060 6GB), the architecture 
+                introduces a formalized <strong>Hardware Tenancy Protocol</strong>. This protocol 
+                treats GPU access as a scarce, exclusive resource rather than an implicitly shared one.
+            </p>
+            <p>
+                Hardware tenancy is enforced via a distributed, Redis-based Mutex implemented at 
+                the API Gateway level. This guarantees that only a single inference workload may 
+                acquire GPU execution rights at any given time, preventing undefined behavior 
+                caused by VRAM contention and CUDA context fragmentation.
             </p>
 
             <div class="info-card">
                 <h4>Resource Management Logic:</h4>
                 <ul class="info-list">
-                    <li><strong>Single-Task Mutex:</strong> Prevents concurrent GPU requests that would trigger OOM (Out of Memory) crashes.</li>
-                    <li><strong>Aggressive Cache Purging:</strong> The Worker explicitly purges VRAM and invokes garbage collection during context switches between Static and Temporal models.</li>
-                    <li><strong>Weight Streaming:</strong> Model layers are streamed from System RAM (32GB) to VRAM (6GB) only during active computation cycles.</li>
+                    <li>
+                        <strong>Single-Task Mutex:</strong> Enforces exclusive GPU access, preventing 
+                        concurrent inference requests that would otherwise trigger OOM (Out of Memory) 
+                        crashes or silent tensor corruption.
+                    </li>
+                    <li>
+                        <strong>Aggressive Cache Purging:</strong> The inference worker explicitly 
+                        purges VRAM allocations and invokes garbage collection during context switches 
+                        between Static Image and Temporal Video diffusion models, maintaining a clean 
+                        execution state.
+                    </li>
+                    <li>
+                        <strong>Weight Streaming:</strong> Model layers are dynamically streamed from 
+                        System RAM (32GB) to VRAM (6GB) only during active computation cycles, enabling 
+                        large model execution under severe memory constraints.
+                    </li>
                 </ul>
             </div>
 
             <h2>Asynchronous Task Orchestration</h2>
             <p>
-                The lifecycle of a neural transformation is entirely asynchronous. We utilize 
-                <strong>Celery</strong> as the task orchestrator and <strong>Redis</strong> 
-                as the message broker. This ensures that the Application Layer remains responsive 
-                while the Infrastructure Layer executes high-latency CUDA computations.
+                The lifecycle of a neural transformation within Z-Realism is designed to be entirely 
+                asynchronous. Given the inherently high latency of diffusion-based inference, all 
+                long-running operations are decoupled from the request-response cycle of the API.
+            </p>
+            <p>
+                The system utilizes <strong>Celery</strong> as the task orchestrator and 
+                <strong>Redis</strong> as the message broker, forming a resilient execution backbone. 
+                This architecture ensures that the Application Layer remains responsive and stateless 
+                while the Infrastructure Layer performs computationally intensive CUDA workloads.
+            </p>
+            <p>
+                Intermediate telemetry, including denoising state, latent previews, and heuristic 
+                metrics, is streamed back through the broker, allowing the client laboratory to 
+                observe and evaluate the generative process in near real time.
             </p>
 
             <!-- Mermaid Diagram: Asynchronous Flow -->
