--- a/src/presentation/contact.html
+++ b/src/presentation/contact.html
@@ -46,9 +46,17 @@
             <h1 class="info-title">Connect with the Institute</h1>
             <div class="info-content">
                 <p>
-                    The Z-Realism Research Institute is an open-source initiative. We welcome 
-                    technical inquiries, peer reviews of our neural protocols, and 
-                    collaborations from the global informatics engineering community.
+                    The Z-Realism Research Institute is an open-source, research-driven initiative 
+                    dedicated to the advancement of photorealistic character synthesis under 
+                    constrained computational environments. Communication channels are designed 
+                    to support academic discourse, technical validation, and collaborative 
+                    experimentation across disciplines.
+                </p>
+                <p>
+                    We actively welcome technical inquiries, peer reviews of our neural protocols, 
+                    architectural discussions, and research collaborations from the global 
+                    informatics engineering, computer vision, and applied machine learning 
+                    communities.
                 </p>
             </div>
         </header>
@@ -58,9 +66,15 @@
             <!-- 1. PRIMARY TECHNICAL CONTACT -->
             <h2>Research & Inquiries</h2>
             <p>
-                For high-level architectural questions or specific inquiries regarding the 
-                <strong>Hybrid Hardware Orchestration</strong> logic or the <strong>Subject DNA 
-                Metadata</strong> structure, you can reach the lead architect directly:
+                This channel is intended for high-level architectural discussions, doctoral-level 
+                peer review, and specific inquiries regarding core components of the Z-Realism 
+                ecosystem. Topics include, but are not limited to, the 
+                <strong>Hybrid Hardware Orchestration</strong> pipeline, GPU tenancy mechanisms, 
+                and the internal structure of the <strong>Subject DNA Metadata</strong> model.
+            </p>
+            <p>
+                For matters requiring direct technical clarification or research alignment, you 
+                may contact the lead architect and principal investigator directly:
             </p>
             <div class="info-card">
                 <ul class="info-list" style="margin-bottom: 0;">
@@ -73,27 +87,49 @@
             <!-- 2. CONTRIBUTION PROTOCOL -->
             <h2>Contribution Protocol</h2>
             <p>
-                As an MIT-licensed project, we encourage developers and researchers to fork the 
-                repository and propose technical improvements. Whether it's optimizing the 
-                <strong>AnimateDiff</strong> temporal loop or enhancing the <strong>CIELAB 
-                evaluation heuristics</strong>, your contributions help push the boundaries 
-                of photorealistic character synthesis.
+                Z-Realism is released under the MIT License to promote transparent research, 
+                reproducibility, and community-driven innovation. We encourage developers, 
+                researchers, and advanced practitioners to fork the repository and propose 
+                technical enhancements aligned with the project’s architectural principles.
+            </p>
+            <p>
+                Contributions may range from low-level performance optimizations—such as refining 
+                the <strong>AnimateDiff</strong> temporal denoising loop—to higher-level research 
+                extensions, including improvements to the <strong>CIELAB evaluation heuristics</strong>, 
+                perceptual loss metrics, or metadata-driven latent sequencing strategies.
             </p>
             
             <div class="info-card">
                 <h4>How to Contribute:</h4>
                 <ol class="info-list">
-                    <li><strong>Fork the Repository:</strong> Establish a local research manifold of the source code.</li>
-                    <li><strong>Apply Clean Code Patterns:</strong> Ensure your changes adhere to SOLID principles and the established Hexagonal Architecture.</li>
-                    <li><strong>Submit for Peer Review:</strong> Open a Pull Request with detailed telemetry data if you are modifying generative weights or neural parameters.</li>
+                    <li>
+                        <strong>Fork the Repository:</strong> Establish an isolated local research 
+                        manifold of the source code to experiment without impacting the primary 
+                        lineage.
+                    </li>
+                    <li>
+                        <strong>Apply Clean Code Patterns:</strong> Ensure all modifications adhere 
+                        to SOLID principles, Domain-Driven Design constraints, and the established 
+                        Hexagonal Architecture boundaries.
+                    </li>
+                    <li>
+                        <strong>Submit for Peer Review:</strong> Open a Pull Request with a clear 
+                        technical rationale. If modifying generative weights, heuristics, or neural 
+                        parameters, include detailed telemetry data and reproducibility notes.
+                    </li>
                 </ol>
             </div>
 
             <!-- 3. DIGITAL MANIFOLDS (REPOSITORIES) -->
             <h2>Digital Manifolds</h2>
             <p>
-                Follow the evolution of the Z-Realism protocol and access the latest stable 
-                releases through our official version control nodes.
+                The evolution of the Z-Realism protocol is fully transparent. Source code, version 
+                history, and stable research releases are published through our official digital 
+                manifolds, enabling traceability and long-term reproducibility.
+            </p>
+            <p>
+                These repositories serve both as implementation references and as executable 
+                research artifacts aligned with the accompanying doctoral thesis.
             </p>
             <div style="display: flex; gap: 20px; margin-top: 20px; flex-wrap: wrap;">
                 <a href="https://github.com/egonzalez" target="_blank" class="btn btn-secondary">
