--- a/src/presentation/legal.html
+++ b/src/presentation/legal.html
@@ -46,10 +46,16 @@
             <h1 class="info-title">Terms & Protocols</h1>
             <div class="info-content">
                 <p>
-                    By accessing the Z-Realism Research Laboratories, you agree to operate within the 
-                    ethical and legal boundaries defined in this document. This platform is a 
-                    research-oriented system designed for the responsible development of 
-                    neural generative technologies.
+                    By accessing or utilizing the Z-Realism Research Laboratories, you explicitly 
+                    agree to operate within the ethical, legal, and academic boundaries defined 
+                    in this document. Z-Realism is a research-oriented platform developed in the 
+                    context of doctoral-level investigation into neural generative systems.
+                </p>
+                <p>
+                    The purpose of this framework is to establish clear responsibility, ensure 
+                    compliance with applicable AI governance standards, and promote the 
+                    responsible exploration of generative technologies in both academic and 
+                    experimental contexts.
                 </p>
             </div>
         </header>
@@ -59,52 +65,91 @@
             <!-- 1. SOFTWARE LICENSE (MIT) -->
             <h2>1. Software Architecture License (MIT)</h2>
             <p>
-                The orchestration logic, infrastructure adapters, and presentation layer of 
-                the Z-Realism AI ecosystem are licensed under the <strong>MIT License</strong>. 
-                Copyright &copy; 2024 Enrique González Gutiérrez. You are free to modify 
-                and distribute the code, provided the original copyright notice is maintained.
+                The orchestration logic, infrastructure adapters, domain services, and 
+                presentation layer components of the Z-Realism AI ecosystem are licensed 
+                under the <strong>MIT License</strong>. Copyright &copy; 2024 Enrique González 
+                Gutiérrez.
+            </p>
+            <p>
+                This license grants permission, free of charge, to any person obtaining a copy 
+                of the software and associated documentation files to use, copy, modify, merge, 
+                publish, distribute, sublicense, and/or sell copies of the software, provided 
+                that the original copyright notice and permission notice are included in all 
+                copies or substantial portions of the software.
             </p>
 
             <!-- 2. AI MODEL LICENSE (RAIL-M) -->
             <h2>2. Neural Model Weights (RAIL-M)</h2>
             <p>
-                While the software architecture is MIT, the underlying neural weights utilized 
-                by the generators (Stable Diffusion, ControlNet, and AnimateDiff) are subject 
-                to the <strong>CreativeML Open RAIL-M License</strong>.
+                While the surrounding software architecture is distributed under the MIT 
+                License, the underlying neural model weights utilized by the inference engines 
+                (including Stable Diffusion, ControlNet, and AnimateDiff) are governed by the 
+                <strong>CreativeML Open RAIL-M License</strong>.
+            </p>
+            <p>
+                This distinction reflects the dual nature of modern AI systems, where open 
+                software orchestration coexists with usage-constrained model artifacts. Users 
+                are required to comply fully with the terms imposed by the RAIL-M license when 
+                generating, modifying, or distributing synthesized content.
             </p>
             <div class="info-card">
                 <h4>Mandatory Usage Restrictions:</h4>
                 <ul class="info-list">
-                    <li>You may not utilize the system to produce or share illegal or harmful content.</li>
-                    <li>You may not generate content intended to deceive, misinform, or infringe upon the identity of real individuals.</li>
-                    <li>The researcher/user bears full legal responsibility for the synthesized manifolds and their distribution.</li>
+                    <li>
+                        You may not utilize the system to generate, promote, or distribute 
+                        illegal, harmful, or exploitative content under any jurisdiction.
+                    </li>
+                    <li>
+                        You may not generate content intended to deceive, impersonate, 
+                        misinform, or infringe upon the identity, likeness, or rights of 
+                        real individuals without explicit authorization.
+                    </li>
+                    <li>
+                        The researcher or user bears full legal and ethical responsibility 
+                        for all synthesized manifolds, derived artifacts, and any downstream 
+                        distribution or publication.
+                    </li>
                 </ul>
             </div>
 
             <!-- 3. NEURAL CACHE PROTOCOL -->
             <h2 id="cookies">3. Neural Cache Protocol (Data Privacy)</h2>
             <p>
-                Z-Realism prioritizes local data sovereignty. Our "Neural Cache" system 
-                operates strictly at a functional infrastructure level. We do not engage 
-                in behavioral tracking or external data transmission.
+                Z-Realism is designed around the principle of local data sovereignty. All 
+                inference workflows are executed within the user-controlled environment, 
+                and no generated content is transmitted to external services or third-party 
+                analytics platforms.
+            </p>
+            <p>
+                The internal <strong>Neural Cache</strong> mechanism operates strictly at the 
+                infrastructure level and exists solely to ensure the stability and continuity 
+                of long-running neural inference tasks.
             </p>
             <div class="info-card">
                 <p style="font-size: 0.9rem; margin-bottom: 0;">
-                    <strong>Session Manifolds:</strong> We utilize essential session tokens (cookies) 
-                    to track <strong>Neural Task IDs</strong>. This is an engineering requirement 
-                    that ensures the system can reconnect to high-latency inference tasks if the 
-                    client manifold is refreshed. <strong>No personal metadata is ever 
-                    harvested or transmitted.</strong>
+                    <strong>Session Manifolds:</strong> The platform utilizes essential session 
+                    tokens (cookies) to associate the client interface with active 
+                    <strong>Neural Task IDs</strong>. This is an engineering requirement that 
+                    allows the system to safely reconnect to high-latency CUDA workloads in the 
+                    event of a page refresh or transient network interruption. 
+                    <strong>No personal data, behavioral analytics, or identifying metadata is 
+                    collected, stored, or transmitted.</strong>
                 </p>
             </div>
 
             <!-- 4. DISCLAIMER -->
             <h2>4. Limitation of Liability</h2>
             <p>
-                THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND. IN NO EVENT 
-                SHALL THE ARCHITECTS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES, 
-                OR OTHER LIABILITY ARISING FROM THE USE OR MISUSE OF THE NEURAL GENERATORS 
-                OR THE DATASETS PROVIDED WITHIN THE METADATA KNOWLEDGE BASE.
+                THE SOFTWARE AND ASSOCIATED NEURAL SYSTEMS ARE PROVIDED "AS IS", WITHOUT WARRANTY 
+                OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF 
+                MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT.
+            </p>
+            <p>
+                IN NO EVENT SHALL THE AUTHORS, ARCHITECTS, OR COPYRIGHT HOLDERS BE LIABLE FOR 
+                ANY CLAIM, DAMAGES, OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT, 
+                OR OTHERWISE, ARISING FROM, OUT OF, OR IN CONNECTION WITH THE SOFTWARE, THE 
+                NEURAL GENERATORS, OR THE USE OR MISUSE OF ANY SYNTHESIZED DATA OR METADATA 
+                PRODUCED BY THE SYSTEM.
             </p>
         </section>
 
