--- a/src/presentation/index.html
+++ b/src/presentation/index.html
@@ -14,6 +14,13 @@
   modular component injection (Nav/Footer) to ensure architectural consistency 
   across the entire research ecosystem.
 
+  RESEARCH CONTEXT:
+  This landing environment is not merely a visual interface, but a conceptual 
+  gateway into a structured experimentation framework focused on neural image 
+  synthesis, controlled realism projection, and identity-preserving transformation 
+  protocols. It represents the formal threshold between artistic abstraction and 
+  computationally grounded photorealistic reconstruction.
+
   author: Enrique González Gutiérrez <enrique.gonzalez.gutierrez@gmail.com>
 -->
 <head>
@@ -57,6 +64,21 @@
                 encoded in the source—into coherent still imagery and motion-aware 
                 sequences suitable for research, prototyping, and visual analysis.
             </p>
+            <p class="hero-desc">
+                The platform operates under a modular experimentation philosophy, 
+                where each synthesis stage is isolated, measurable, and reproducible. 
+                Every output is treated as a data point within a broader continuum 
+                of realism projection studies, allowing iterative refinement of 
+                perceptual fidelity, lighting simulation accuracy, and anatomical 
+                plausibility metrics.
+            </p>
+            <p class="hero-desc">
+                Z-Realism does not aim to replace artistic intent; rather, it 
+                augments it by introducing computational rigor into the transition 
+                from symbolic illustration to physically plausible representation. 
+                The result is a controlled bridge between imagination and neural 
+                materialization.
+            </p>
             <div class="hero-actions">
                 <a href="image-lab.html" class="btn btn-primary">
                     ENTER STATIC LAB
@@ -89,6 +111,20 @@
                     pipeline, producing identity-stable frames suitable for 
                     evaluation, dataset generation, or subsequent temporal extension.
                 </p>
+                <p>
+                    Advanced prompt stratification and negative-conditioning 
+                    matrices are applied to minimize semantic drift and mitigate 
+                    latent hallucination artifacts. Cross-attention mapping is 
+                    monitored to ensure that facial topology, proportional ratios, 
+                    and texture distribution remain consistent with the extracted 
+                    Subject DNA signature.
+                </p>
+                <p>
+                    The laboratory is optimized for controlled experimentation, 
+                    enabling researchers to compare sampling schedulers, CFG 
+                    scaling strategies, and structural guidance weights in a 
+                    reproducible and quantifiable manner.
+                </p>
                 <div class="module-link">LAUNCH STATIC MODULE &rarr;</div>
             </a>
 
@@ -107,6 +143,18 @@
                     enable high-resolution video synthesis on local, consumer-grade 
                     hardware, making temporal experimentation accessible without 
                     reliance on cloud-based compute clusters.
+                </p>
+                <p>
+                    Motion vectors are constrained through adaptive noise injection 
+                    and latent anchoring checkpoints, ensuring that identity features 
+                    remain stable across micro-expressions, camera shifts, and 
+                    simulated environmental lighting changes.
+                </p>
+                <p>
+                    Temporal entropy is continuously evaluated to reduce flicker, 
+                    geometry distortion, and chromatic instability. The result is 
+                    a coherent, cinematic-grade output sequence that preserves 
+                    both narrative continuity and biometric consistency.
                 </p>
                 <div class="module-link">LAUNCH TEMPORAL MODULE &rarr;</div>
             </a>
@@ -127,6 +175,18 @@
                     optimized stochastic parameters for the diffusion loop, enabling 
                     reproducibility, controlled variation, and identity preservation 
                     across both static and temporal synthesis stages.
+                </p>
+                <p>
+                    By correlating pixel-space observations with latent-space 
+                    embeddings, the subsystem constructs a structured identity 
+                    profile that can be re-injected into subsequent generations 
+                    as a stabilization prior.
+                </p>
+                <p>
+                    Over time, this metadata-driven architecture enables the 
+                    creation of reusable identity templates, facilitating 
+                    longitudinal experimentation and comparative realism studies 
+                    across multiple synthesis cycles.
                 </p>
                 <div class="module-link" style="color: var(--text-muted);">SYSTEM INTEGRATED</div>
             </div>
