--- a/src/presentation/legal.html
+++ b/src/presentation/legal.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <!-- 
   path: src/presentation/legal.html
-  description: Legal Terms, AI Ethics, and Neural Cache Protocol v21.1.
+  description: Legal Terms, AI Ethics, and Neural Cache Protocol v21.2.
   
   ABSTRACT:
   A comprehensive legal and ethical framework for the Z-Realism ecosystem. 
   It defines software ownership, AI usage restrictions, and data privacy 
   protocols for the doctoral research in Informatics Engineering.
   
+  EXTENDED CONTEXT:
+  This document formalizes the operational, ethical, and legal boundaries 
+  governing the interaction between researchers and generative neural systems. 
+  It serves as a compliance anchor aligned with contemporary AI governance 
+  principles and responsible innovation frameworks.
+
   ARCHITECTURAL ROLE (Presentation Layer):
   Acts as the primary compliance documentation. It provides the legal 
   scaffolding for the responsible use of neural generative technologies.
@@ -20,23 +26,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LEGAL | Z-Realism Research Institute</title>
 
-    <!-- FAVICON CONFIGURATION -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     
-    <!-- Design System & Documentation Styles -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/info.css">
 </head>
 <body>
-    <!-- Persistent Ambient Cyber-Grid -->
     <div class="grid-overlay"></div>
 
-    <!-- 
-      DYNAMIC NAVIGATION INJECTION: 
-      The <nav> is automatically injected by js/nav.js.
-    -->
-
-    <!-- Documentation Container -->
     <main class="info-container container">
         
         <a href="index.html" class="back-link">&larr; BACK TO GATEWAY</a>
@@ -56,6 +53,13 @@
                     compliance with applicable AI governance standards, and promote the 
                     responsible exploration of generative technologies in both academic and 
                     experimental contexts.
+                </p>
+                <p>
+                    This document should be interpreted not only as a legal safeguard but also 
+                    as an ethical contract between the system architect and its users. It defines 
+                    the acceptable perimeter of experimentation, the responsibilities attached 
+                    to synthetic media generation, and the principles guiding reproducible 
+                    scientific research within this ecosystem.
                 </p>
             </div>
         </header>
@@ -77,6 +81,11 @@
                 that the original copyright notice and permission notice are included in all 
                 copies or substantial portions of the software.
             </p>
+            <p>
+                The MIT License applies strictly to the software architecture and engineering 
+                framework. It does not extend to third-party model weights, pretrained neural 
+                artifacts, datasets, or external plugins integrated into the research workflow.
+            </p>
 
             <!-- 2. AI MODEL LICENSE (RAIL-M) -->
             <h2>2. Neural Model Weights (RAIL-M)</h2>
@@ -91,6 +100,11 @@
                 software orchestration coexists with usage-constrained model artifacts. Users 
                 are required to comply fully with the terms imposed by the RAIL-M license when 
                 generating, modifying, or distributing synthesized content.
+            </p>
+            <p>
+                Any violation of the RAIL-M terms constitutes a direct breach of the operational 
+                agreement governing the use of this platform and may expose the user to civil or 
+                criminal liability depending on the applicable jurisdiction.
             </p>
             <div class="info-card">
                 <h4>Mandatory Usage Restrictions:</h4>
@@ -125,6 +139,12 @@
                 infrastructure level and exists solely to ensure the stability and continuity 
                 of long-running neural inference tasks.
             </p>
+            <p>
+                No telemetry, behavioral profiling, advertising identifiers, or third-party 
+                tracking mechanisms are embedded within the system architecture. The platform 
+                intentionally avoids analytics frameworks that would compromise research 
+                independence or user privacy.
+            </p>
             <div class="info-card">
                 <p style="font-size: 0.9rem; margin-bottom: 0;">
                     <strong>Session Manifolds:</strong> The platform utilizes essential session 
@@ -137,8 +157,25 @@
                 </p>
             </div>
 
-            <!-- 4. DISCLAIMER -->
-            <h2>4. Limitation of Liability</h2>
+            <!-- 4. ETHICAL AI PRINCIPLES -->
+            <h2>4. Ethical AI Research Principles</h2>
+            <p>
+                The Z-Realism Institute adheres to principles of transparency, accountability, 
+                proportionality, and harm mitigation in the deployment of generative AI systems.
+            </p>
+            <p>
+                All experimental workflows are designed to preserve human dignity, avoid 
+                discriminatory bias amplification, and prevent malicious downstream usage of 
+                synthesized outputs.
+            </p>
+            <p>
+                Users are encouraged to critically evaluate generated outputs, acknowledge the 
+                synthetic nature of produced media when publicly distributed, and avoid 
+                contributing to misinformation ecosystems.
+            </p>
+
+            <!-- 5. DISCLAIMER -->
+            <h2>5. Limitation of Liability</h2>
             <p>
                 THE SOFTWARE AND ASSOCIATED NEURAL SYSTEMS ARE PROVIDED "AS IS", WITHOUT WARRANTY 
                 OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF 
@@ -151,13 +188,15 @@
                 NEURAL GENERATORS, OR THE USE OR MISUSE OF ANY SYNTHESIZED DATA OR METADATA 
                 PRODUCED BY THE SYSTEM.
             </p>
+            <p>
+                By continuing to use this platform, you acknowledge full responsibility for 
+                compliance with all applicable laws, regulations, and ethical standards in 
+                your jurisdiction.
+            </p>
         </section>
 
     </main>
 
-    <!-- 
-      SHARED ARCHITECTURAL COMPONENTS 
-    -->
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/cookie-consent.js"></script>
